Implement user authentication via wallet address.
Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/5b4943c2-76b8-45a1-bdcb-68f34fd77ddc/a2dc6223-855a-44ed-a409-3198bdf1224e.jpg
